--- a/Stellar-master/partials/_sidebar.html
+++ b/Stellar-master/partials/_sidebar.html
@@ -1,5 +1,6 @@
-<nav class="sidebar sidebar-offcanvas" style="height: 100%" id="sidebar">
-  <ul class="nav">
+<nav class="sidebar sidebar-offcanvas" style="height: 100%,position: fixed;" id="sidebar">
+  <ul class="nav" style="position: fixed;">
+    <!--
     <li class="nav-item nav-profile">
       <a href="#" class="nav-link">
         <div class="profile-image">
@@ -16,6 +17,7 @@
         </div>
       </a>
     </li>
+    -->
     <li class="nav-item nav-category">
       <span class="nav-link">MAIN NAVIGATION</span>
     </li>
