crate ve transfer sayfaları düzenlendi

--- a/Stellar-master/partials/_sidebar.html
+++ b/Stellar-master/partials/_sidebar.html
@@ -1,4 +1,4 @@
-<nav class="sidebar sidebar-offcanvas" style="height: 100%;" id="sidebar">
+<nav class="sidebar sidebar-offcanvas" style="height: 100%" id="sidebar">
   <ul class="nav">
     <li class="nav-item nav-profile">
       <a href="#" class="nav-link">
