--- a/Stellar-master/partials/_navbar.html
+++ b/Stellar-master/partials/_navbar.html
@@ -6,7 +6,7 @@
     <a class="navbar-brand brand-logo-mini" href="index.html"><img src="http://localhost:8100/Stellar-master/images/logo-mini.svg" alt="logo" /></a>
   </div>
   <div class="navbar-menu-wrapper d-flex align-items-center flex-grow-1">
-    <h5 class="mb-0 font-weight-medium d-none d-lg-flex">Welcome Ocean Dashboard!</h5>
+    <h5 class="mb-0 font-weight-medium d-none d-lg-flex">Welcome Ocean!</h5>
 
     <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
       <span class="icon-menu"></span>
